# lorem-cli

./: Cargo.toml  README.md
.github/workflows/: publish.yml  release.yml
src/: main.rs
