[package]
name = "lorem-cli"
version = "0.2.0"
edition = "2021"
description = "A CLI tool to generate lorem ipsum text in words, sentences, or paragraphs."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.6", default-features = false, features = ["derive", "std"] }
anyhow = "1.0"
fastrand = "2.5"

[profile.release]
opt-level = 3       # max speed (speed > size)
lto = "fat"         # full cross-crate link-time optimization
strip = true        # strip symbols, much smaller binary
codegen-units = 1   # slower compile, better optimization
panic = "abort"     # no unwind machinery: smaller and slightly faster